<resources>
    <string name="app_name">alight</string>
    <string name="board_description_title">DESCRIPTION</string>
    <string name="board_description">- 15-minute loop bus ride around MIT</string>
    <string name="board_time_title">ARRIVES IN</string>
    <string name="mit_board_time_title">TIME</string>
    <string name="board_time">- Monday to Friday, from 7AM to 7PM (leaves every 15 min)</string>
    <string name="board_cost_title">COST</string>
    <string name="board_cost">- $2\n- Free with MIT ID, or coupon (available at the Alight office in MIT, Room 7-336)</string>
    <string name="board_instructions_title">DIRECTIONS</string>
    <string name="board_instructions">- Stand right next to the EZ RIDE sign (see photo)</string>
    <string name="board_start">START</string>
    <string name="board_now">BOARD NOW</string>
    <string name="end_of_tour_survey_prompt">Thank you! \n  We\'re always trying to improve Alight so please take 2 minutes to share your feedback with us! n\ You'll also be automatically entered to win a prize!</string>
    <string name="end_of_tour_survey_button">SURVEY</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_language">Language</string>
    <string name="skip">Skip</string>
    <string name="nearby">Nearby</string>

    <string name="board_description_title_ch">描述</string>
    <string name="board_description_ch">- 巴士会绕校园一圈回到上车点，每程15分钟</string>
    <string name="board_time_title_ch">时间</string>
    <string name="mit_board_time_title_ch">时间</string>
    <string name="board_time_ch">- 周一至周五，早上7点到下午7点</string>
    <string name="board_cost_title_ch">票价</string>
    <string name="board_cost_ch">- $2/票 \n- 持MIT的学生证上车免费，或者去Alight的办公室7号楼336室可取免费票</string>
    <string name="board_instructions_title_ch"> 说明 </string>
    <string name="board_instructions_ch">- 巴士不是每站都停，需站在“EZ RIDE”的牌子旁边等车</string>
    <string name="board_start_ch">开始</string>
    <string name="board_now_ch">开始</string>
    <string name="end_of_tour_survey_prompt_ch">感谢你的使用！n\ 请花两分钟填写问卷，帮助Alight应用不断完善，并参与我们的抽奖活动！</string>
    <string name="end_of_tour_survey_button_ch">用户反馈</string>
    <string name="sign_out_ch">退出</string>
    <string name="change_language_ch">语言</string>
    <string name="skip_ch">下一个</string>
    <string name="nearby_ch">附近</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_poi">Go!</string>

</resources>
